align text & fix image shade

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1047,7 +1047,7 @@ hr.solid {
 #img-glow {
   height: 50px;
   width: 440px;
-  background: radial-gradient(circle, rgba(51, 230, 191, 0.57) 0%, rgba(16, 16, 16, 1) 100%);
+  background: radial-gradient(circle, rgba(51, 230, 191, 0.57) 0%, rgba(16, 16, 16, 0.507) 100%);
   filter: blur(15px);
-  margin-top: -50px;
+  margin-top: -160px;
 }
